--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "description": "A high quality UI components Library with Vue.js",
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "keywords": [
     "oview",
